--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     <name>DeepLearning </name>
     <description>DeepLearning4j application</description>
     <properties>
-        <nd4j.version>0.4-rc3.9-SNAPSHOT</nd4j.version>
-        <dl4j.version>0.4-rc3.9-SNAPSHOT</dl4j.version>
-        <canova.version>0.0.0.15-SNAPSHOT</canova.version>
+        <nd4j.version>0.4-rc3.9</nd4j.version>
+        <dl4j.version>0.4-rc3.9</dl4j.version>
+        <canova.version>0.0.0.15</canova.version>
     </properties>
 
     <repositories>
@@ -65,12 +65,12 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>canova-data-nlp</artifactId>
-            <version>0.0.0.15-SNAPSHOT</version>
+            <version>0.0.0.15</version>
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>canova-nd4j-nlp</artifactId>
-            <version>0.0.0.15-SNAPSHOT</version>
+            <version>0.0.0.15</version>
         </dependency>
     </dependencies>
 
